--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nulcio-library",
   "version": "1.0.0",
   "description": "Made with create-react-library",
-  "author": "eaarranz",
+  "author": "vinyeta",
   "license": "MIT",
-  "repository": "eaarranz/nulcio-library",
+  "repository": "vinyeta/nulcio-library",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
