--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nulcio-library",
-  "version": "1.0.2",
+  "name": "nuclio-library",
+  "version": "1.0.3",
   "description": "Made with create-react-library",
   "author": "vinyeta",
   "license": "MIT",
